# movie

./: .editorconfig  .gitignore  .gitleaks.toml  CLAUDE.md  PROMPT.md  README.md  TASKS.md
admin-web/: .gitignore  README.md  (+8 more)
backend/: .env.example  .gitignore  .importlinter  Dockerfile  README.md  alembic.ini  pyproject.toml  seed.py
backend/alembic/: README.md  env.py  script.py.mako
backend/alembic/versions/channel_pack/: 20260514_0647_838107a39a3c_add_popup_buttons_and_allowed_hosts.py
backend/app/: celery_app.py  main.py
backend/app/api/: v1.py
backend/app/core/: clock.py  config.py  database.py  deps.py  ids.py  logging.py  security.py  security_protocol.py
backend/app/modules/admin/: models.py  permissions.py  rbac_routers.py  routers.py  schemas.py
backend/app/modules/analytics/: models.py  schemas.py
backend/app/modules/analytics/routers/: admin.py  track.py
backend/app/modules/channel_pack/: __init__.py  deps.py  models.py  schemas.py
backend/app/modules/channel_pack/adapters/: object_store.py  walle.py
backend/app/modules/channel_pack/routers/: admin.py  app.py
backend/app/modules/channel_pack/services/: app_registry.py  hmac_verifier.py  i18n_fallback.py  play_store_toggle_guard.py  popup_button_resolver.py  signing_service.py  upgrade_engine.py  upgrade_rule_validator.py
backend/app/modules/channel_pack/tasks/: sign_apk.py
backend/app/modules/content/: __init__.py  models.py  schemas.py  services.py  services_vod.py
backend/app/modules/content/routers/: admin.py  app.py  vod_webhook.py  watch_history.py
backend/app/modules/user/: __init__.py  models.py  schemas.py
backend/app/modules/user/routers/: admin.py  auth.py  devices.py  me.py
backend/app/shared/: cache_service.py  redis_cache.py  repository_base.py
backend/app/shared/media_provider/: aliyun_vod.py  protocol.py  service.py
backend/app/shared/middleware/: app_sign.py  rate_limit.py  trace_id.py
backend/scripts/: cp_rotate_hmac.py  cp_test_client.py  export_api_docs.py  locustfile.py  perf_invalidate.py  perf_locustfile.py  perf_walle.py  seed_perf_rules.py
backend/tests/: conftest.py  test_admin_rules_button_validation.py  test_alembic_popup_buttons_migration.py  test_allowed_hosts_schema.py  test_allowed_hosts_update.py  test_app_registry.py  test_cache_service.py  test_channel_toggle_play_store.py  test_cp_models_popup_buttons.py  test_hmac_error_injection.py  test_hmac_verifier.py  test_i18n_fallback_helper.py  test_jwt_rotation.py  test_otp_throttle.py  test_play_store_toggle_guard.py  test_popup_button_schema.py  test_rate_limit.py  test_resolve_popup_buttons.py  test_secondary_review.py  test_signing_service.py  test_tenant_isolation.py  test_upgrade_check_cache_compat.py  test_upgrade_check_i18n_and_buttons.py  test_upgrade_check_play_store_no_leak.py  test_upgrade_check_response_schema.py  test_upgrade_engine.py  test_upgrade_rule_validator.py  test_video_visibility.py  test_walle_e2e.py
(+82 files in other folders)
