[project]
name = "movie-backend"
version = "0.1.0"
description = "movie 项目后端 + App 分发平台（多租户）"
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.110",
    "uvicorn[standard]>=0.30",
    "sqlalchemy>=2.0",
    "pydantic>=2.0",
    "pydantic-settings>=2.0",
    "email-validator>=2.0",
    "pyjwt[crypto]>=2.8",
    "bcrypt>=4.0",
    "python-multipart>=0.0.9",
]

[tool.uv]
package = false
