[project]
name = "movie-backend"
version = "0.1.0"
description = "movie 项目后端 + App 分发平台（多租户）"
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.110",
    "uvicorn[standard]>=0.30",
    "sqlalchemy>=2.0",
    "pydantic>=2.0",
    "pydantic-settings>=2.0",
    "email-validator>=2.0",
    "pyjwt[crypto]>=2.8",
    "bcrypt>=4.0",
    "python-multipart>=0.0.9",
    "httpx>=0.28.1",
    "structlog>=24.0",
]

[dependency-groups]
dev = [
    "ruff>=0.6",
    "mypy>=1.10",
    "pytest>=8.0",
    "pytest-asyncio>=0.23",
    "import-linter>=2.0",
]

[tool.uv]
package = false
