[project]
name = "movie-backend"
version = "0.1.0"
description = "movie 项目后端 + App 分发平台（多租户）"
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.110",
    "uvicorn[standard]>=0.30",
    "sqlalchemy>=2.0",
    "pydantic>=2.0",
    "pydantic-settings>=2.0",
    "email-validator>=2.0",
    "pyjwt[crypto]>=2.8",
    "bcrypt>=4.0",
    "python-multipart>=0.0.9",
    "httpx>=0.28.1",
    "structlog>=24.0",
    "alembic>=1.13",
]

[project.optional-dependencies]
redis = ["redis>=5.0"]

[dependency-groups]
dev = [
    "ruff>=0.6",
    "mypy>=1.10",
    "pytest>=8.0",
    "pytest-asyncio>=0.23",
    "import-linter>=2.0",
]

[tool.uv]
package = false

[tool.ruff]
line-length = 100
target-version = "py312"
extend-exclude = [".venv", "storage", "scripts"]

[tool.ruff.lint]
select = ["E", "F", "I", "B", "UP", "N", "S"]
ignore = [
    "E501",   # line length（formatter 处理）
    "S101",   # assert 在测试中常见
    "B008",   # FastAPI 的 Depends() 默认值
    "N818",   # exception 命名
    "UP046",  # PEP 695 type params；Generic[T] 兼容性更广，按需迁移
]

[tool.ruff.lint.per-file-ignores]
"**/seed.py" = ["S105", "S106"]
"**/scripts/**" = ["S101", "S105", "S106", "S310", "S311"]
# pydantic-settings 字段默认值是 dev 占位，生产由 env 覆盖
"app/core/config.py" = ["S105", "S106"]
# walle CLI 是受信任的本机二进制，subprocess 调用 by design
"app/modules/channel_pack/adapters/walle.py" = ["S603", "S607"]
# google_auth mock 模式：解析失败 fallback 到下一种策略，记日志成本不值得
"app/modules/user/services/google_auth.py" = ["S110"]
# tests/：允许中文测试名 / dev 占位密码 / 大写本地变量
"tests/**" = ["N802", "N806", "S105", "S106", "F401"]

[tool.mypy]
python_version = "3.12"
ignore_missing_imports = true
check_untyped_defs = true
warn_unused_ignores = true
exclude = ["\\.venv/", "storage/", "scripts/"]

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"
